--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div>
                 <div class="footer_store">
                     <a href="#" class="footer_store_link">
-                        <img src="../src/img/footer/appstore.png" alt="appstore" class="footer_store_img">
+                        <img src="../img/footer/appstore.png" alt="appstore" class="footer_store_img">
                     </a>
                     <a href="#" class="footer_store_link_center">
                         <img src="../src/img/footer/googleplay.png" alt="googleplay" class="footer_store_img">
