--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="/src/icons/header/uber777.moscow.png" alt="logo"></a>
+                        <a href="#" class="subheader_logo"><img src="/icons/header/uber777.moscow.png" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
@@ -88,7 +88,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/1.png" alt="1" class="reasons_icon">
+                            <img src="/icons/causes/1.png" alt="1" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
@@ -100,7 +100,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/5.png" alt="5" class="reasons_icon">
+                            <img src="/icons/causes/5.png" alt="5" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -113,7 +113,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/2.png" alt="2" class="reasons_icon">
+                            <img src="/icons/causes/2.png" alt="2" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
@@ -126,7 +126,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/6.png" alt="6" class="reasons_icon">
+                            <img src="/icons/causes/6.png" alt="6" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
@@ -139,7 +139,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/3.png" alt="3" class="reasons_icon">
+                            <img src="/icons/causes/3.png" alt="3" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
@@ -152,7 +152,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/7.png" alt="7" class="reasons_icon">
+                            <img src="/icons/causes/7.png" alt="7" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -165,7 +165,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/4.png" alt="4" class="reasons_icon">
+                            <img src="/icons/causes/4.png" alt="4" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -178,7 +178,7 @@
                 <div class="col-md-6">
                     <div class="reasons_item">
                         <div class="reasons_round">
-                            <img src="/src/icons/causes/8.png" alt="8" class="reasons_icon">
+                            <img src="/icons/causes/8.png" alt="8" class="reasons_icon">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
@@ -246,7 +246,7 @@
             <h2 class="title title_white">Выбор - отличная штука!</h2>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
 
-            <img src="../src/img/car.png" alt="uber_car" class="choice_img">
+            <img src="../img/car.png" alt="uber_car" class="choice_img">
 
             <h2 class="choice_descr">
                 Машины на каждый день<br>
@@ -377,10 +377,10 @@
                         <img src="../img/footer/appstore.png" alt="appstore" class="footer_store_img">
                     </a>
                     <a href="#" class="footer_store_link_center">
-                        <img src="../src/img/footer/googleplay.png" alt="googleplay" class="footer_store_img">
+                        <img src="../img/footer/googleplay.png" alt="googleplay" class="footer_store_img">
                     </a>
                     <a href="#" class="footer_store_link">
-                        <img src="../src/img/footer/windowsstore.png" alt="windowsstore" class="footer_store_img">
+                        <img src="../img/footer/windowsstore.png" alt="windowsstore" class="footer_store_img">
                     </a>
                 </div>
             </div>
